--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,9 @@
 inst/doc
 .DS_Store
 *~
-./data-raw/municipalities.*
-./data/municipalities*
-^R/.RData$
-^R/.Rhistory$
-^.RData$
-^.Rhistory$
-^.*~
+data-raw/municipalities.*
+data/municipalities*
+R/.RData
+R/.Rhistory
+.*~
 **/.*~
