--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,16 @@ export(data.frame.covidmx)
 export(download.covidmx)
 export(download.diccionario)
 export(load.municipios)
+export(timelineByState)
 export(variables.diccionario)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,tally)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_excel)
+importFrom(rgdal,readOGR)
 importFrom(utils,download.file)
 importFrom(utils,read.csv2)
 importFrom(utils,unzip)
