--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(data.frame.covidmx)
 export(download.covidmx)
 export(download.diccionario)
 export(load.municipios)
+export(timelineByMunicipio)
 export(timelineByState)
 export(variables.diccionario)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,order_by)
 importFrom(dplyr,tally)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
