--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     readxl (>= 1.3.1),
     rgdal (>= 1.4),
     lubridate (>= 1.7.4),
-    magrittr (>= 1.5)
+    magrittr (>= 1.5),
+    ggplot2 (>= 3.1.1)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
