--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,17 @@ export(downloadCovidmx)
 export(downloadHospitalizedCdmxEdoMex)
 export(downloadHospitalsZmcm)
 export(downloadPolicies)
+export(downloadSINAVE)
+export(prepCHZmcm)
 export(timelineByMunicipio)
 export(timelineByState)
 export(variables.diccionario)
+importFrom(RCurl,getURL)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,order_by)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,tally)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
