--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     rgdal (>= 1.4),
     lubridate (>= 1.7.4),
     magrittr (>= 1.5),
-    ggplot2 (>= 3.1.1)
+    ggplot2 (>= 3.1.1),
+    RCurl (>= 1.95)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
